# pydebroglie

./: README.md  noxfile.py  pyproject.toml
src/pydebroglie_cli/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
